anneal/vendor/datatest-stable/tests/compile-fail/extra-args.rs
datatest_stable::harness! {
    { test = my_test, root = "abc", pattern = ".*", extra = "xyz" }
}
